fixed layout issues

--- a/contacts/style.css
+++ b/contacts/style.css
@@ -71,7 +71,6 @@ span#logo > a {
     color: #393939;
     font-weight: 900;
     font-size: 36px;
-    margin-left: 50px;
 }
 
 ul#navbar-links {
@@ -136,4 +135,18 @@ div.page-indicator {
     height: 7px;
     background-color: #383838;
     border-radius: 100%;
+}
+
+@media only screen and (max-width: 1000px) {
+    div.container {
+        padding: 20px;
+    }
+
+    header > div.navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 10px;
+    }
 }
